--- a/d00/ex02/doft.css
+++ b/d00/ex02/doft.css
@@ -147,10 +147,19 @@ body { height: 100%;
 	border-radius: 0px;
 }
 .chair {
-	shape: "rect";
-	coords: 380,380,560,660;
+	position: absolute;
+	width: 7%;
+	height: 11.5vw;
+	border:1px solid transparent;
+	
+	margin-left: 16.5%;
+	margin-top: -13.5%;
 }
 .mac {
-	shape: "rect";
-	coords: 930,360,1180,580;
+	position: absolute;
+	width: 6%;
+	height: 5vw;
+	border:1px solid transparent;
+	margin-left: 32.5%;
+	margin-top: -15%;
 }
